Added jar to default import

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ Stdlib-java/.idea/markdown-navigator/profiles_settings.xml
 Stdlib-java/.idea/misc.xml
 Stdlib-java/.idea/modules.xml
 Stdlib-java/.idea/workspace.xml
+DateFormatter/.idea/markdown-navigator.xml
