Added static native methods

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Stdlib-java/.idea/misc.xml
 Stdlib-java/.idea/modules.xml
 Stdlib-java/.idea/workspace.xml
 DateFormatter/.idea/markdown-navigator.xml
+Stdlib-java/out/production/Stdlib-java/generated/net/globulus/simi/api/JavaApi.java
