Added compound assignments and File-java

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,10 @@ Stdlib-java/.idea/modules.xml
 Stdlib-java/.idea/workspace.xml
 DateFormatter/.idea/markdown-navigator.xml
 Stdlib-java/out/production/Stdlib-java/generated/net/globulus/simi/api/JavaApi.java
+File-java/.idea/artifacts/File_java_jar.xml
+File-java/.idea/compiler.xml
+File-java/.idea/markdown-navigator/profiles_settings.xml
+File-java/.idea/modules.xml
+File-java/.idea/misc.xml
+File-java/.idea/workspace.xml
+File-java/out/production/File-java/generated/net/globulus/simi/api/JavaApi.java
