--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,12 @@ File-java/.idea/workspace.xml
 File-java/out/production/File-java/generated/net/globulus/simi/api/JavaApi.java
 metasimi/stdlib/File.simi
 metasimi/stdlib/Stdlib.simi
+metasimi/docs.md
+Native-java/.idea/artifacts/Native_java_jar.xml
+Native-java/.idea/compiler.xml
+Native-java/.idea/markdown-navigator/profiles_settings.xml
+Native-java/.idea/compiler.xml
+Native-java/.idea/misc.xml
+Native-java/.idea/modules.xml
+Native-java/.idea/workspace.xml
+Native-java/out/production/Native-java/generated/net/globulus/simi/api/JavaApi.java
