--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,11 @@ Native-java/.idea/modules.xml
 Native-java/.idea/workspace.xml
 Native-java/out/production/Native-java/generated/net/globulus/simi/api/JavaApi.java
 Stdlib-java/out/production/Stdlib-java/generated/net/globulus/simi/api/JavaApi.java
+Gson-java/.idea/artifacts/Gson_java_jar.xml
+Gson-java/.idea/compiler.xml
+Gson-java/.idea/markdown-navigator/profiles_settings.xml
+Gson-java/.idea/compiler.xml
+Gson-java/.idea/misc.xml
+Gson-java/.idea/modules.xml
+Gson-java/.idea/workspace.xml
+Gson-java/out/production/Gson-java/generated/net/globulus/simi/api/JavaApi.java
