Added Async and Net-java

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,10 @@ Gson-java/.idea/misc.xml
 Gson-java/.idea/modules.xml
 Gson-java/.idea/workspace.xml
 Gson-java/out/production/Gson-java/generated/net/globulus/simi/api/JavaApi.java
+Net-java/.idea/artifacts/Net_java_jar.xml
+Net-java/.idea/compiler.xml
+Net-java/.idea/markdown-navigator/profiles_settings.xml
+Net-java/.idea/modules.xml
+Net-java/.idea/workspace.xml
+Net-java/.idea/misc.xml
+Net-java/out/production/Net-java/generated/net/globulus/simi/api/JavaApi.java
