Gson-java fixes

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@ File-java/out/production/File-java/generated/net/globulus/simi/api/File_java.jav
 Net-java/out/production/Net-java/generated/net/globulus/simi/api/Net_java.java
 Stdlib-java/out/production/Stdlib-java/generated/net/globulus/simi/api/JavaApi.java
 Stdlib-java/out/production/Stdlib-java/generated/net/globulus/simi/api/Stdlib_java.java
+Gson-java/out/production/Gson-java/generated/net/globulus/simi/api/Gson_java.java
