--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ Net-java/out/production/Net-java/generated/net/globulus/simi/api/Net_java.java
 Stdlib-java/out/production/Stdlib-java/generated/net/globulus/simi/api/JavaApi.java
 Stdlib-java/out/production/Stdlib-java/generated/net/globulus/simi/api/Stdlib_java.java
 Gson-java/out/production/Gson-java/generated/net/globulus/simi/api/Gson_java.java
+Mariadb-java/out/production/Mariadb-java/generated/net/globulus/simi/api/JavaApi.java
