--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ Stdlib-java/out/production/Stdlib-java/generated/net/globulus/simi/api/JavaApi.j
 Stdlib-java/out/production/Stdlib-java/generated/net/globulus/simi/api/Stdlib_java.java
 Gson-java/out/production/Gson-java/generated/net/globulus/simi/api/Gson_java.java
 Mariadb-java/out/production/Mariadb-java/generated/net/globulus/simi/api/JavaApi.java
+Sql-java/out/production/Sql-java/generated/net/globulus/simi/api/JavaApi.java
